--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,17 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render :partial => 'layouts/top_bar'%>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-9">
+          <%#= bootstrap_flash %>
+          <%= yield %>
+        </div>
+      </div><!--/row-->
+
+
+    </div> <!-- /container -->
+
   </body>
 </html>
