--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -7,10 +7,7 @@
     <a class="navbar-brand mr-auto" href="#">Import App</a>
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Import1</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Import2</a>
+        <%= link_to "Imports", imports_path, class: 'nav-link'%>
       </li>
     </ul>
   </div>
