csv editable import added

--- a/app/views/imports/import_product.html.erb
+++ b/app/views/imports/import_product.html.erb
@@ -1,3 +1,6 @@
+<%= stylesheet_link_tag    'handsontable.full' %>
+<%= javascript_include_tag 'csv_import' %>
+
 <div class="container-fluid">
   <div class="row col-sm-12 col-md-12 mt-5">
     <h2 class="mr-auto">Import Product</h2>
@@ -11,3 +14,5 @@
     </main>
   </div>
 </div>
+<div id="example"></div>
+<br>
