--- a/app/views/imports/import_product.html.erb
+++ b/app/views/imports/import_product.html.erb
@@ -8,11 +8,23 @@
   <div class="row">
     <main class="col-sm-12 col-md-12">
       <%= form_for @request, { url: import_imports_path , class: 'form-inline mt-2 mt-md-0' , multipart: true } do |f| %>
-        <%= f.file_field :import_file %>
-        <%= f.submit "Import" %>
+        <div class="form-group">
+          <%= @request.errors.full_messages.first if @request.errors.any? %>
+        </div>
+        <%= hidden_field_tag :request_from, params[:action] %>
+        <%= f.hidden_field :import_for, value: ImportRequest::IMPORT_FOR[:product] %>
+        <div class="form-group">
+          <%= f.file_field :import_file %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "Import Prodcts", class: 'btn btn-primary' %>
+        </div>
       <% end %>
     </main>
   </div>
 </div>
-<div id="example"></div>
+
+
+<br>
+<div id="import_file_rows"></div>
 <br>
